--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Pentium.Labs
 description: Coding && Thinking
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars2.githubusercontent.com/u/7352163?v=3&s=460
+avatar: https://github.com/pentium3/pentium3.github.com/blob/master/images/logo.jpg
 
 #
 # Flags below are optional
