--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Pentium.Labs
 description: Coding && Thinking
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/pentium3/pentium3.github.com/blob/master/images/logo.jpg
+avatar: http://images.cnblogs.com/cnblogs_com/pdev/635966/o_logo.jpg
 
 #
 # Flags below are optional
