--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr: 
   github: pentium3
   instagram: 
-  linkedin: 
+  linkedin: pentium
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: pentiumlab
