--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Pentium.Labs
+name: Map of the web – Internet Archive
 
 # Short bio or description (displayed in the header)
-description: Coding && Thinking
+description: GSoC 2018 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://images.cnblogs.com/cnblogs_com/pdev/635966/o_logo.jpg
+avatar: 
 
 #
 # Flags below are optional
@@ -21,12 +21,12 @@ footer-links:
   email: 
   facebook: 
   flickr: 
-  github: pentium3
+  github: verseczy
   instagram: 
-  linkedin: pentium
+  linkedin: 
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: pentiumlab
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
 
 # Your disqus shortname, entering this will enable commenting on posts
